Styling tweaks and FF bugfixes
- increase min-hight of the risk popover to always show all content
- remove oversized border on legend of risk popover, add borders to cells
- remove border on 'consequence' label on risk popover.
- center align table items on risk popover
- bug: likelihood / consequence switching buttons not working on FF 60
  fix: function was relying on an implicit event argument, removed this and passed the name of the table to show instead.
- bug: risk matrix cell borders not showing
  fix: add background-clip: padding-box

--- a/src/components/risk-popover/risk-popover.scss
+++ b/src/components/risk-popover/risk-popover.scss
@@ -5,6 +5,7 @@ risk-popover {
 	$likelihood-cell-width: 6vw;
 	$color-coding-key-width: 7.5em;
 	%digit-cell{
+    background-clip: padding-box;
 		width: $basic-cell-width;
 		font-weight: $cell-font-weight;
 		border: solid black 2px;
@@ -62,6 +63,7 @@ risk-popover {
 		width: $likelihood-cell-width;
 		font-weight: $cell-font-weight;
 		border: solid black 2px;
+    text-align: center;
 		@media (max-width: 460px) {
 			width: 15vw;
 			font-size: 10px;
@@ -115,24 +117,27 @@ risk-popover {
 		overflow: visible;
 		white-space: nowrap;
 		border: none;
-		border-bottom: solid black 2px;
+//		border-bottom: solid black 2px;
 	}
 	.color-coding{
 		float: left;
 		width: $color-coding-key-width;
-		border: solid black 1px;
+		//border: solid black 1px;
 		clear: both;
 	}
 	.color-coding > div {
 		@extend %color-code-cell;
 	}
 	#color-code-cell1{
+    border: 2px solid black;
 		background-color: green;
 	}
 	#color-code-cell2{
+    border: 2px solid black;
 		background-color: yellow;
 	}
 	#color-code-cell3{
+    border: 2px solid black;
 		background-color: red;
 	}
 	.axis-labels-more-info {
@@ -171,6 +176,7 @@ risk-popover {
     width: 30vw;
 	}
 	.crit-table-row > th {
+    text-align: center;
 		font-weight: normal;
 	}
 	.crit-table-left-col {
@@ -223,6 +229,16 @@ risk-popover {
   #buttons-container {
     display: flex;
 
+  }
+
+  th {
+          text-align: center;
+  }
+
+  #con-label {
+          th {
+            border:none;
+          }
   }
 
 
